# ipr_labs_sem_2

./: .gitignore  Dockerfile  README.md
.github/workflows/: ci-cd.yml  lab-6-k8s.yml
k8s/: README.md  deployment.yaml  service.yaml
lab_5/: .dockerignore  README.md  pyproject.toml
lab_5/k8s/: configmap.yaml  secret.yaml
lab_5/src/: exceptions.py  main.py  task.py
lab_5/tests/: test_descriptors.py
lab_6/: README.md
lab_6/app/k8s/helm/task-model-app/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
lab_6/app/k8s/helm/task-model-app/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  (+2 more)
lab_6/app/k8s/kustomization/base/: configmap.yaml  deployment.yaml  service.yaml
lab_6/infra/k8s/helm/postgres-infra/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
lab_6/infra/k8s/kustomization/base/: kustomization.yaml  postgres-statefulset.yaml
lab_7/: README.md  docker-compose.yml
lab_7/app/: Dockerfile  pyproject.toml  requirements.txt
lab_7/app/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
lab_7/app/src/: __init__.py  descriptors.py  exceptions.py  observability.py  server.py  task.py
lab_7/app/tests/: test_server.py
lab_7/observability/: helm-values-kube-prometheus-stack.yaml
lab_7/observability/compose/grafana/dashboards/: task-model-lab7.json
lab_7/observability/compose/prometheus/: prometheus.yml
lab_7/observability/k8s/: servicemonitor-task-model.yaml  tempo-configmap.yaml  tempo-deployment.yaml  tempo-service.yaml
src/: descriptors.py  server.py
tests/: test_server.py  test_task.py
(+21 files in other folders)
